Fixed missing padding on profiles without backgrounds

--- a/assets/steam.css
+++ b/assets/steam.css
@@ -1,5 +1,5 @@
-.profile_content .has_profile_background {
-	margin-top: 0px;
+.profile_content {
+	padding-top: 14px;
 }
 
 .extra-notes-container{
